--- a/YUME_ARSENAL-Q62.html
+++ b/YUME_ARSENAL-Q62.html
@@ -37,7 +37,10 @@
 		<script src="https://kit.fontawesome.com/32bd0e5d50.js" crossorigin="anonymous"></script>
 		<!-- JSの読み込み -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-		<script src="https://qoo622.github.io/Arsenal-Q62/ARSENAL-Q62.js"></script>
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/shuffle-text@0.3.0/build/shuffle-text.min.js"></script>
+		<script src="ARSENAL-Q62.js"></script>
 		<!-- Twitterのスクリプト -->
 		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		<!-- ogp -->
@@ -100,19 +103,19 @@
 	</div>
 	<!-- - - - - - - - - - - ここからFeature周り - - - - - - - - - -->
 	<div class="Content-wrapper">
-		<h2 class="collection-title">FEATURE</h2>
+		<h2 class="collection-title js_typing">FEATURE</h2>
 		<div class="Column_wrapper">
-			<div class="Three-Column_left">
+			<div class="Three-Column_left fadeUpTrigger">
 				<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/IMG_1039_min.JPG">
 				<p class="Catch-copy_min">隠密性と駆動時間向上</p>
 				<p class="Base-text">暗視モードで強制点灯していたIR投光器を排除することにより、自己位置の曝露を防止するだけでなく駆動時間の延長に。</p>
 			</div>
-			<div class="Three-Column_center">
+			<div class="Three-Column_center fadeUpTrigger">
 				<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0073.jpg">
 				<p class="Catch-copy_min">オプションでの機能強化</p>
 				<p class="Base-text">ポリカーボネート製レンズガードの装着や偏光板での無段階でのモニター輝度調整、バッテリーの外部化など、実用性を向上。</p>
 			</div>
-			<div class="Three-Column_right">
+			<div class="Three-Column_right fadeUpTrigger">
 				<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0084_min.JPG">
 				<p class="Catch-copy_min">ヘルメットマウント化</p>
 				<p class="Base-text">スマホVR用レンズを流用し、実用的な視認距離で夢ビジョンをハンズフリー運用可能に。</p>
@@ -126,7 +129,7 @@
 	</div>
 	<div class="Content-wrapper">
 		<h2 class="collection-title">OPERATION</h2>
-		<div class="V-Card">
+		<div class="V-Card fadeUpTrigger">
 			<div class="V-Card_Photo">
 				<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0050~2.jpg" >
 			</div>
@@ -136,7 +139,7 @@
 				<p class="Base-text">安心して撃たれ、安心して転べる安価なデジタルNVとして。モジュール構成のため被弾しても破損部位の交換のみで修理が可能。</p>
 			</div>
 		</div>
-		<div class="V-Card">
+		<div class="V-Card fadeUpTrigger">
 			<div class="V-Card_Text">
 				<p class="Content-number">02</p>
 				<h3>サーマルフュージョン</h3>
@@ -151,8 +154,8 @@
 	<!-- - - - - - - - - - - ここからThermal Fusion周り - - - - - - - - - -->
 	
 	<div class="Content-wrapper">
-		<h2 class="collection-title">FUSION</h2>
-		<div class="Column_wrapper">
+		<h2 class="collection-title js_typing">FUSION</h2>
+		<div class="Column_wrapper fadeUpTrigger">
 			<div class="Column-left">
 				<img src="https://github.com/Qoo622/3D-print/blob/master/_image/YUME/Daydream/DSC_0149.jpg?raw=true" width="100%"/>
 			</div>
@@ -165,17 +168,17 @@
 			</div>
 		</div>
 		<div class="Column_wrapper" style="margin-top: 48px;">
-			<div class="Three-Column_left">
+			<div class="Three-Column_left fadeUpTrigger">
 				<img src="https://github.com/Qoo622/3D-print/blob/master/_image/YUME/Daydream/20240506_232100_470_exported_56208_Original.jpeg?raw=true">
 				<p class="Catch-copy_min">White Hot</p>
 				<p class="Base-text">相対的に温度の高い部分を明るく表示するモード。距離約10ｍの人物（立位）が強調されている。IR補助灯なし。</p>
 			</div>
-			<div class="Three-Column_center">
+			<div class="Three-Column_center fadeUpTrigger">
 				<img src="https://github.com/Qoo622/3D-print/blob/master/_image/YUME/Daydream/20240506_232100_470_exported_82916_Original.jpeg?raw=true">
 				<p class="Catch-copy_min">Black Hot</p>
 				<p class="Base-text">相対的に温度の高い部分を暗く表示するモード。同条件。熱源の詳細をIRで視認したい場合に有効。</p>
 			</div>
-			<div class="Three-Column_right">
+			<div class="Three-Column_right fadeUpTrigger">
 				<img src="https://github.com/Qoo622/3D-print/blob/master/_image/YUME/Daydream/20240506_232100_470_exported_177666_Original.jpeg?raw=true">
 				<p class="Catch-copy_min">Outline</p>
 				<p class="Base-text">人体など特徴的な熱源の輪郭を強調するモード。距離5ｍほど。極力IRでの視界を活かしたい場合に。</p>
@@ -186,7 +189,7 @@
 	<!-- - - - - - - - - - - ここからUpdate周り - - - - - - - - - -->
 
 	<div class="Content-wrapper">
-		<h2 class="collection-title">UPDATE</h2>
+		<h2 class="collection-title js_typing">UPDATE</h2>
 		<a class="Update-content" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/YUME_v1/DayDream" target="_blank" rel="noopener noreferrer">
 			<div class="Date">2024.05.07.</div>
 			<div class="Base-text">サーマルフュージョンオプション『DayDream』を公開しました。</div>
@@ -214,7 +217,7 @@
 	</div>
 	<!-- - - - - - - - - - - ここからConversion周り - - - - - - - - - -->
 	<div class="Content-wrapper">
-		<a class="Conversion" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/YUME_v1" target="_blank" rel="noopener noreferrer">
+		<a class="Conversion fadeUpTrigger" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/YUME_v1" target="_blank" rel="noopener noreferrer">
 			<div class="Text">
 				<p class="Catch-copy_min"><i class="fa-solid fa-cloud-arrow-down"></i>How to Download</p>
 				<p class="Base-text">作成用のデータはGithub内で公開しております。分解、組み立ての詳しいマニュアルもこちらのReadmeの内容を参照ください。</p>
@@ -224,8 +227,8 @@
 	</div>
 	<!-- - - - - - - - - - - ここからProduct周り - - - - - - - - - -->
 	<div class="Content-wrapper">
-		<h2 class="collection-title">PRODUCTS</h2>
-		<a class="Product light" href="https://qoo622.github.io/Arsenal-Q62/P320-EXF_ARSENAL-Q62.html">
+		<h2 class="collection-title js_typing">PRODUCTS</h2>
+		<a class="Product light fadeUpTrigger" href="https://qoo622.github.io/Arsenal-Q62/P320-EXF_ARSENAL-Q62.html">
 			<div class="Product-description">
 				<p class="Product-title">P320 Extra Frame</p>
 				<p class="tag">P320</p><p class="tag">Custom parts</p>
@@ -236,7 +239,7 @@
 		</a>
 		<div class="Column_wrapper">
 			<div class="Column-left">
-				<a class="Product-min" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/FNVGS" target="_blank" rel="noopener noreferrer">
+				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/FNVGS" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/FNVGS_cover_Square.png">
 						<p class="Product-title">FNVGS</p>
 						<p class="tag">NVG</p><p class="tag">Display</p>
@@ -245,7 +248,7 @@
 				</a>
 			</div>
 			<div class="Column-right">
-				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/TM-CCG_Holster-Base.stl" target="_blank" rel="noopener noreferrer">
+				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/etc/TM-CCG_Holster-Base.stl" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20220511_025748748-01.jpeg">
 						<p class="Product-title">Compact Carry QLS</p>
 						<p class="tag">Holster</p><p class="tag">Custom parts</p>
