--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		<div class="Column_wrapper">
 			<div class="Column-left">
 				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/M870/M870_M-LOK_Shell-Holder.stl" target="_blank" rel="noopener noreferrer">
-					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20220524_045122485-01.jpeg">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20220524_045122485-01.avif">
 						<p class="Product-title">M-LOK Shell Holder</p>
 						<p class="tag">M-LOK</p><p class="tag">Custom parts</p>
 						<p class="Product-text">M-LOKスロットに12Gショットシェルを固定可能なホルダー</p>
@@ -157,7 +157,7 @@
 			</div>
 			<div class="Column-right">
 				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/MP7/MP7-Stock-base.stl" target="_blank" rel="noopener noreferrer">
-					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/IMG_20210604_1944569-01.jpeg">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/IMG_20210604_1944569-01.avif">
 						<p class="Product-title">MP7 20mm Stock Base</p>
 						<p class="tag">MP7</p><p class="tag">Custom parts</p>
 						<p class="Product-text">マルイ電動MP7用の20mm規格ストックベース</p>
@@ -168,7 +168,7 @@
 		<div class="Column_wrapper">
 			<div class="Column-left fadeUpTrigger">
 				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/G19_slide-cover-plate_charging-ring.stl" target="_blank" rel="noopener noreferrer">
-					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/IMG_20210125_2348102.jpg">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/IMG_20210125_2348102.avif">
 						<p class="Product-title">Glock Charging Ring</p>
 						<p class="tag">Glock</p><p class="tag">Custom parts</p>
 						<p class="Product-text">マルイ GBB Gen.3 Glockのリアプレート用チャージングリング</p>
@@ -177,7 +177,7 @@
 			</div>
 			<div class="Column-right fadeUpTrigger">
 				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/TM-CCG_Holster-Base.stl" target="_blank" rel="noopener noreferrer">
-					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20220511_025748748-01.jpeg">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20220511_025748748-01.avif">
 						<p class="Product-title">Compact Carry QLS</p>
 						<p class="tag">Holster</p><p class="tag">Equipment</p>
 						<p class="Product-text">マルイコンパクトキャリー用ホルスターのQLSアダプター</p>
@@ -188,7 +188,7 @@
 		<div class="Column_wrapper">
 			<div class="Column-left fadeUpTrigger" id="Magplate-AKM">
 				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/AKM-GBB_Mag-Plate_v1.0.stl" target="_blank" rel="noopener noreferrer">
-					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20241014_040609758_min.jpg">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20241014_040609758_min.avif">
 						<p class="Product-title">"Mag" Plate for AKM</p>
 						<p class="tag">Magazine</p><p class="tag">Firsgun</p>
 						<p class="Product-text">TM製AKMマガジンに磁石を仕込めるようになるボトムプレート</p>
@@ -197,7 +197,7 @@
 			</div>
 			<div class="Column-right fadeUpTrigger" id="Magplate">
 				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/NGRS_Mag-Plate_v1.0.stl" target="_blank" rel="noopener noreferrer">
-					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/GY2-lglasAAdFbg.jpeg">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/GY2-lglasAAdFbg.avif">
 						<p class="Product-title">"Mag" Plate for P-Mag</p>
 						<p class="tag">Magazine</p><p class="tag">Firsgun</p>
 						<p class="Product-text">次世代M4用P-Magに磁石を仕込めるようになるボトムプレート</p>
