--- a/P320-EXF_ARSENAL-Q62.html
+++ b/P320-EXF_ARSENAL-Q62.html
@@ -190,7 +190,7 @@
 		<div class="Column_wrapper">
 			<div class="Column-left">
 				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/etc/G19_slide-cover-plate_charging-ring.stl" target="_blank" rel="noopener noreferrer">
-					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/IMG_20210125_2348102.jpg">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/IMG_20210125_2348102.avif">
 						<p class="Product-title">Glock Charging Ring</p>
 						<p class="tag">Glock</p><p class="tag">Custom parts</p>
 						<p class="Product-text">マルイ GBB Gen.3 Glockのリアプレート用チャージングリング</p>
@@ -199,7 +199,7 @@
 			</div>
 			<div class="Column-right">
 				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/MP7/MP7-Stock-base.stl" target="_blank" rel="noopener noreferrer">
-					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/IMG_20210604_1944569-01.jpeg">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/IMG_20210604_1944569-01.avif">
 						<p class="Product-title">MP7 20mm Stock Base</p>
 						<p class="tag">MP7</p><p class="tag">Custom parts</p>
 						<p class="Product-text">マルイ電動MP7用の20mm規格ストックベース</p>
