--- a/YUME_ARSENAL-Q62.html
+++ b/YUME_ARSENAL-Q62.html
@@ -249,7 +249,7 @@
 			</div>
 			<div class="Column-right">
 				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/etc/TM-CCG_Holster-Base.stl" target="_blank" rel="noopener noreferrer">
-					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20220511_025748748-01.jpeg">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20220511_025748748-01.avif">
 						<p class="Product-title">Compact Carry QLS</p>
 						<p class="tag">Holster</p><p class="tag">Custom parts</p>
 						<p class="Product-text">マルイコンパクトキャリー用ホルスターのQLSアダプター</p>
