--- a/YUME_ARSENAL-Q62.html
+++ b/YUME_ARSENAL-Q62.html
@@ -146,7 +146,7 @@
 				<p class="Base-text">スマホ向けサーマルカメラとRaspberry Piのオプション追加で熱源可視化能力を獲得。</p>
 			</div>
 			<div class="V-Card_Photo">
-				<img src="https://github.com/Qoo622/3D-print/blob/master/_image/YUME/Daydream/DSC_0134-Enhanced-NR.jpg?raw=true" >
+				<img src="https://github.com/Qoo622/3D-print/blob/master/_image/YUME/Daydream/DSC_0134-Enhanced-NR.avif?raw=true" >
 			</div>
 		</div>
 	</div>
@@ -157,7 +157,7 @@
 		<h2 class="collection-title js_typing">FUSION</h2>
 		<div class="Column_wrapper fadeUpTrigger">
 			<div class="Column-left">
-				<img src="https://github.com/Qoo622/3D-print/blob/master/_image/YUME/Daydream/DSC_0149.jpg?raw=true" width="100%"/>
+				<img src="https://github.com/Qoo622/3D-print/blob/master/_image/YUME/Daydream/DSC_0149.avif?raw=true" width="100%"/>
 			</div>
 			<div class="Column-right">
 				<h3>サーマルフュージョンオプション “Day Dream”</h3>
@@ -169,17 +169,17 @@
 		</div>
 		<div class="Column_wrapper" style="margin-top: 48px;">
 			<div class="Three-Column_left fadeUpTrigger">
-				<img src="https://github.com/Qoo622/3D-print/blob/master/_image/YUME/Daydream/20240506_232100_470_exported_56208_Original.jpeg?raw=true">
+				<img src="https://github.com/Qoo622/3D-print/blob/master/_image/YUME/Daydream/20240506_232100_470_exported_56208_Original.avif?raw=true">
 				<p class="Catch-copy_min">White Hot</p>
 				<p class="Base-text">相対的に温度の高い部分を明るく表示するモード。距離約10ｍの人物（立位）が強調されている。IR補助灯なし。</p>
 			</div>
 			<div class="Three-Column_center fadeUpTrigger">
-				<img src="https://github.com/Qoo622/3D-print/blob/master/_image/YUME/Daydream/20240506_232100_470_exported_82916_Original.jpeg?raw=true">
+				<img src="https://github.com/Qoo622/3D-print/blob/master/_image/YUME/Daydream/20240506_232100_470_exported_82916_Original.avif?raw=true">
 				<p class="Catch-copy_min">Black Hot</p>
 				<p class="Base-text">相対的に温度の高い部分を暗く表示するモード。同条件。熱源の詳細をIRで視認したい場合に有効。</p>
 			</div>
 			<div class="Three-Column_right fadeUpTrigger">
-				<img src="https://github.com/Qoo622/3D-print/blob/master/_image/YUME/Daydream/20240506_232100_470_exported_177666_Original.jpeg?raw=true">
+				<img src="https://github.com/Qoo622/3D-print/blob/master/_image/YUME/Daydream/20240506_232100_470_exported_177666_Original.avif?raw=true">
 				<p class="Catch-copy_min">Outline</p>
 				<p class="Base-text">人体など特徴的な熱源の輪郭を強調するモード。距離5ｍほど。極力IRでの視界を活かしたい場合に。</p>
 			</div>
