--- a/P320-EXF_ARSENAL-Q62.html
+++ b/P320-EXF_ARSENAL-Q62.html
@@ -50,7 +50,7 @@
 			<meta property="og:title" content="P320-EXF | ARSENAL Q62" />
 			<meta property="og:description" content="SIG/VFC P320用のカービンコンバージョンキット" />
 			<meta property="og:site_name" content="ARSENAL Q62" />
-			<meta property="og:image" content="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/OGP-image_P320-EXF.png" />
+			<meta property="og:image" content="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/OGP-image_P320-EXF.avif" />
 			<meta name="twitter:card" content="summary_large_image" />
 			<meta name="twitter:site" content="@Qoo6221" />
 
@@ -85,14 +85,14 @@
 				</div>
 			</div>
 			<div class="single_top-content_center"> <!-- 中央要素 -->
-				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/IMG_1047.PNG">
+				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/IMG_1047.avif">
 				<a class="btn" href="https://github.com/Qoo622/3D-print/tree/master/P320/Carbine-Kit" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-github"></i>DOWNLOAD<i class="fa-solid fa-up-right-from-square"></i></a>
 			</div>
 		</div>
 	
 	<!-- - - - - - - - - - - ここからAbout周り - - - - - - - - - -->
 	<div class="About">
-		<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/PXL_20230208_130909860~2.jpg">
+		<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/PXL_20230208_130909860~2.avif">
 		<div class="About-text" style="background-color: rgba(0,0,0,0.5); color: #FFF;">
 			<p class="Catch-copy">P320用強化外装</p>
 			<p class="Base-text">P320にはFlux Defense社のMP17やStrike Industries社製のStrike Modular Chassis "SMC"などのメジャーなカービンキットが複数あり、いずれもエアソフト用品としてのキットがモデルアップされています。一方でこれらは材質などから利用ができなかったり、そもそも品薄で入手困難という制約がありました。</p>
@@ -105,17 +105,17 @@
 		<h2 class="collection-title js_typing">FEATURE</h2>
 		<div class="Column_wrapper">
 			<div class="Three-Column_left fadeUpTrigger">
-				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/2E20AC2C-D549-45CB-9654-0B809CAF7E69.jpeg">
+				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/2E20AC2C-D549-45CB-9654-0B809CAF7E69.avif">
 				<p class="Catch-copy_min">拡張性と汎用性</p>
 				<p class="Base-text">フロントの左右に3スロット、下面に6スロットの20mmレールを用意。ライトやフォアグリップなどカービンキットに求められる拡張性を確保。</p>
 			</div>
 			<div class="Three-Column_center fadeUpTrigger">
-				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/DSC_0087.jpg">
+				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/DSC_0087.avif">
 				<p class="Catch-copy_min">照準具の選択肢</p>
 				<p class="Base-text">上面には最大12スロットの20mmレールを採用。LAMとRDSのタンデムだけでなく、軽量スコープなど従来のカービンキットでは難しい構成も。</p>
 			</div>
 			<div class="Three-Column_right fadeUpTrigger">
-				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/DSC_0088.jpg">
+				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/DSC_0088.avif">
 				<p class="Catch-copy_min">自由なストック</p>
 				<p class="Base-text">20mmレール基部によりSIG系折りたたみストックやM4系など、好みや装備に合わせたストックを選択可能。基部には簡易的なスリングホールも。</p>
 			</div>
@@ -129,7 +129,7 @@
 		<h2 class="collection-title js_typing">OPERATION</h2>
 		<div class="V-Card fadeUpTrigger">
 			<div class="V-Card_Photo">
-				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/DSC_0262-1-scaled~2.jpg" >
+				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/DSC_0262-1-scaled~2.avif" >
 			</div>
 			<div class="V-Card_Text">
 				<p class="Content-number">01</p>
@@ -145,7 +145,7 @@
 				<p class="Base-text">※交換後は必ず別途初速測定を受けるなどフィールド指示に従ってください</p>
 			</div>
 			<div class="V-Card_Photo">
-				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/DSC_0092.jpg" >
+				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/DSC_0092.avif" >
 			</div>
 		</div>
 	</div>
@@ -184,7 +184,7 @@
 				<p class="tag">New</p><p class="tag">Yume-vision</p><p class="tag">Equipment</p>
 				<p class="Product-text">中華製の謎の激安第1世代デジタルNV、通称『夢ビジョン』用強化モジュール式外装</p>
 			</div>
-			<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0012@2x.png">
+			<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0012@2x.avif">
 			<p class="GoToPage">Go to Page<i class="fa-solid fa-circle-chevron-right"></i></p>
 		</a>
 		<div class="Column_wrapper">
