--- a/YUME_ARSENAL-Q62.html
+++ b/YUME_ARSENAL-Q62.html
@@ -234,7 +234,7 @@
 				<p class="tag">P320</p><p class="tag">Custom parts</p>
 				<p class="Product-text">SIG/VFC P320用のオリジナルカービンコンバージョンキット</p>
 			</div>
-			<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/IMG_1043.PNG">
+			<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/IMG_1043.avif">
 			<p class="GoToPage">Go to Page<i class="fa-solid fa-circle-chevron-right"></i></p>
 		</a>
 		<div class="Column_wrapper">
