--- a/YUME_ARSENAL-Q62.html
+++ b/YUME_ARSENAL-Q62.html
@@ -50,7 +50,7 @@
 			<meta property="og:title" content="YUME | ARSENAL Q62" />
 			<meta property="og:description" content="通称「夢ビジョン」用のカスタム外装プロダクト" />
 			<meta property="og:site_name" content="ARSENAL Q62" />
-			<meta property="og:image" content="https://qoo622.github.io/Arsenal-Q62/img/YUME/OGP-image_YUME.png" />
+			<meta property="og:image" content="https://qoo622.github.io/Arsenal-Q62/img/YUME/OGP-image_YUME.avif" />
 			<meta name="twitter:card" content="summary_large_image" />
 			<meta name="twitter:site" content="@Qoo6221" />
 
